# lean4

doc/: 404.html  array.html  autobound.html  builtintypes.html  char.html  commit_convention.html  debugging.html  declarations.html  decltypes.html  dep.html  deptypes.html  do.html  enum.html  examples.html  expressions.html  faq.html  fixing_tests.html  float.html  funabst.html  functions.html  implicit.html  index.html  inductive.html  int.html  introdef.html  lean3changes.html  lexical_structure.html  list.html  macro_overview.html  mdbook.html  metaprogramming.html  namespaces.html  nat.html  notation.html  option.html  organization.html  print.html  quickstart.html  searchindex.js  searchindex.json  (+21 more)
doc/dev/: commit_convention.html  cpp_coding_style.html  debugging.html  ffi.html  fixing_tests.html  index.html  mdbook.html  testing.html
doc/examples/: deBruijn.lean.html  interp.lean.html  palindromes.lean.html  phoas.lean.html  tc.lean.html  test_single.sh.html
doc/make/: index.html  msys2.html  nix.html  osx-10.9.html  ubuntu-16.04.html  ubuntu.html  wsl.html  wsl2.html
src/: Lean.lean
src/Init/: Core.lean  LeanInit.lean  Prelude.lean  Util.lean
src/Lean/: Attributes.lean  CoreM.lean  Declaration.lean  Environment.lean  Exception.lean  KeyedDeclsAttribute.lean  Level.lean  MonadEnv.lean  ParserCompiler.lean  Radiya.lean  Syntax.lean  ToString.lean
src/boot/: CMakeLists.txt
src/kernel/: declaration.cpp  declaration.h  environment.cpp  environment.h  equiv_manager.cpp  expr.cpp  expr.h  (+4 more)
src/tests/util/: CMakeLists.txt  object.cpp
tmp/: core.lean
(+346 files in other folders)
